starting to resolve bugs that came with linux